5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1594_1800.log
== TEST (2019-03-29 16:53:41) 
-- CODE:
int(input("Valor de a: "))
int(input("Valor de b: "))
int(input("Valor de c: "))
print(round(a**2+b**2+c**2)/(a+b+c), 7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(a**2+b**2+c**2)/(a+b+c), 7)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:53:44) 
-- CODE:
int(input("Valor de a: "))
int(input("Valor de b: "))
int(input("Valor de c: "))
print(round(a**2+b**2+c**2)/(a+b+c), 7)
-- EXECUTION TIME:
0.150433
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1800/main.py", line 4, in <module>
    print(round(a**2+b**2+c**2)/(a+b+c), 7)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:54:22) 
-- CODE:
int(input("Valor de a: "))
int(input("Valor de b: "))
int(input("Valor de c: "))
int(print(round(a**2+b**2+c**2)/(a+b+c), 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    int(print(round(a**2+b**2+c**2)/(a+b+c), 7))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:54:25) 
-- CODE:
int(input("Valor de a: "))
int(input("Valor de b: "))
int(input("Valor de c: "))
int(print(round(a**2+b**2+c**2)/(a+b+c), 7))
-- EXECUTION TIME:
0.210014
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1800/main.py", line 4, in <module>
    int(print(round(a**2+b**2+c**2)/(a+b+c), 7))
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:55:43) 
-- CODE:
a=int(input("Valor de a: "))
b=int(input("Valor de b: "))
c=int(input("Valor de c: "))
int(print(round(a**2+b**2+c**2)/(a+b+c), 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    int(print(round(a**2+b**2+c**2)/(a+b+c), 7))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:55:46) 
-- CODE:
a=int(input("Valor de a: "))
b=int(input("Valor de b: "))
c=int(input("Valor de c: "))
int(print(round(a**2+b**2+c**2)/(a+b+c), 7))
-- EXECUTION TIME:
0.146406
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1800/main.py", line 4, in <module>
    int(print(round(a**2+b**2+c**2)/(a+b+c), 7))
TypeError: int() argument must be a string or a number, not 'NoneType'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:06:02) 
-- CODE:
a= int(input("Valor de a: "))
b= int(input("Valor de b: "))
c= int(input("Valor de c: "))
valor= int(print(round(a**2+b**2+c**2)/(a+b+c), 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int(print(round(a**2+b**2+c**2)/(a+b+c), 7))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:07:14) 
-- CODE:
a= int(input(float("Valor de a: ")))
b= int(input(float("Valor de b: ")))
c= int(input(float("Valor de c: ")))
valor= int(print(round(a**2+b**2+c**2)/(a+b+c), 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a= int(input(float("Valor de a: ")))
ValueError: could not convert string to float: 'Valor de a: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:37:38) 
-- CODE:
a= int(input("Valor de a: "))
b= int(input("Valor de b: "))
c= int(input("Valor de c: "))
valor= int(print(round(a**2+b**2+c**2)/(a+b+c), 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int(print(round(a**2+b**2+c**2)/(a+b+c), 7))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:40:09) 
-- CODE:
a= int(input("Valor de a: "))
b= int(input("Valor de b: "))
c= int(input("Valor de c: "))

v1=int(a**2)
v2=int(a**2)
v3=int(a**2)
v4=int(a**2)

formula= int(round(v1+v2+v3+v4)/(a+b+c), 7

print(formula)
-- ERROR:
File "XXXX", line 12
    print(formula)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:40:36) 
-- CODE:
a= int(input("Valor de a: "))
b= int(input("Valor de b: "))
c= int(input("Valor de c: "))

v1=int(a**2)
v2=int(a**2)
v3=int(a**2)
v4=int(a**2)

formula= int(round(v1+v2+v3+v4)/(a+b+c), 7

print(int(formula)
-- ERROR:
File "XXXX", line 12
    print(int(formula)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:40:50) 
-- CODE:
a= int(input("Valor de a: "))
b= int(input("Valor de b: "))
c= int(input("Valor de c: "))

v1=int(a**2)
v2=int(a**2)
v3=int(a**2)
v4=int(a**2)

formula= int(round(v1+v2+v3+v4)/(a+b+c), 7

print(int(formula)
-- EXECUTION TIME:
0.14749
-- ERROR:
  File "/home/codebench/codes/1594/1800/main.py", line 12
    print(int(formula)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:41:09) 
-- CODE:
a= int(input("Valor de a: "))
b= int(input("Valor de b: "))
c= int(input("Valor de c: "))

v1=int(a**2)
v2=int(a**2)
v3=int(a**2)
v4=int(a**2)

formula= int(round(v1+v2+v3+v4)/(a+b+c), 7

print(formula)
-- ERROR:
File "XXXX", line 12
    print(formula)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:41:18) 
-- CODE:
a= int(input("Valor de a: "))
b= int(input("Valor de b: "))
c= int(input("Valor de c: "))

v1=int(a**2)
v2=int(a**2)
v3=int(a**2)
v4=int(a**2)

formula= int(round(v1+v2+v3+v4)/(a+b+c), 7


-- ERROR:
File "XXXX", line 12
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:26:54) 
-- CODE:
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))


-- ERROR:
File "XXXX", line 12
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:30:25) 
-- CODE:
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))

a2=float(a**2)
b2=float(b**2)
c2=float(c**2)




-- ERROR:
File "XXXX", line 12
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:35:07) 
-- CODE:
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))

a2=float(a**2)
b2=float(b**2)
c2=float(c**2)

var=float(a2+b2+c2)

formula=float(var/a+b+c)

print(round(formula), 7)


-- OUTPUT:
151 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:35:47) 
-- CODE:
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))

a2=float(a**2)
b2=float(b**2)
c2=float(c**2)

var=float(a2+b2+c2)

formula=float(var/a+b+c)

print(round(formula), 7)


-- EXECUTION TIME:
0.207834
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
151 7
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2187 7
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
372 7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:37:48) 
-- CODE:
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))

a2=float(a**2)
b2=float(b**2)
c2=float(c**2)

var=float(a2+b2+c2)

formula=float(var/a+b+c)

print(round(formula), 7)


-- OUTPUT:
151 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:43:29) 
-- CODE:
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))

a2=float(a**2)
b2=float(b**2)
c2=float(c**2)

far=float(a+b+c)
var=float(a2+b2+c2)

formula=float(var/far)

print(round(formula), 7)


-- OUTPUT:
26 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:46:17) 
-- CODE:
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))

a2=float(a**2)
b2=float(b**2)
c2=float(c**2)

far=float(a+b+c)
var=float(a2+b2+c2)

formula=float(var/far)

print(round(formula), 7)


-- OUTPUT:
26 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:46:23) 
-- CODE:
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))

a2=float(a**2)
b2=float(b**2)
c2=float(c**2)

far=float(a+b+c)
var=float(a2+b2+c2)

formula=float(var/far)

print(round(formula), 7)


-- EXECUTION TIME:
0.212939
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
26 7
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
343 7
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106 7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:03:26) 
-- CODE:
a=int(input("Valor de a: "))
b=int(input("Valor de b: "))
c=int(input("Valor de c: "))

a2=(a**2)
b2=(b**2)
c2=(c**2)

var1=int(a2+b2+c2)
print(var1)


-- OUTPUT:
1925
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:06:01) 
-- CODE:
a=int(input("Valor de a: "))
b=int(input("Valor de b: "))
c=int(input("Valor de c: "))

a2=(a**2)
b2=(b**2)
c2=(c**2)

var1=int(a2+b2+c2)
var2=int(a+b+c)
prin(var2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    prin(var2)
NameError: name 'prin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:06:23) 
-- CODE:
a=int(input("Valor de a: "))
b=int(input("Valor de b: "))
c=int(input("Valor de c: "))

a2=(a**2)
b2=(b**2)
c2=(c**2)

var1=int(a2+b2+c2)
var2=int(a+b+c)
print(var2)


-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:07:32) 
-- CODE:
a=int(input("Valor de a: "))
b=int(input("Valor de b: "))
c=int(input("Valor de c: "))

a2=(a**2)
b2=(b**2)
c2=(c**2)

var1=int(a2+b2+c2)
var2=int(a+b+c)
var3=round(int(var1/var2),7)
print(var3)


-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:08:24) 
-- CODE:
a=int(input("Valor de a: "))
b=int(input("Valor de b: "))
c=int(input("Valor de c: "))

a2=(a**2)
b2=(b**2)
c2=(c**2)

var1=int(a2+b2+c2)
var2=int(a+b+c)
var3=round(int(var1/var2),7)

formula=float(var3)
print(formula)


-- OUTPUT:
25.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:08:36) 
-- CODE:
a=int(input("Valor de a: "))
b=int(input("Valor de b: "))
c=int(input("Valor de c: "))

a2=(a**2)
b2=(b**2)
c2=(c**2)

var1=int(a2+b2+c2)
var2=int(a+b+c)
var3=round(int(var1/var2),7)

formula=float(var3)
print(formula)


-- EXECUTION TIME:
0.147876
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.0
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:09:19) 
-- CODE:
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))

a2=(a**2)
b2=(b**2)
c2=(c**2)

var1=float(a2+b2+c2)
var2=float(a+b+c)
var3=round(float(var1/var2),7)

formula=float(var3)
print(formula)


-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:09:28) 
-- CODE:
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))

a2=(a**2)
b2=(b**2)
c2=(c**2)

var1=float(a2+b2+c2)
var2=float(a+b+c)
var3=round(float(var1/var2),7)

formula=float(var3)
print(formula)


-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:09:49) 
-- CODE:
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))

a2=(a**2)
b2=(b**2)
c2=(c**2)

var1=float(a2+b2+c2)
var2=float(a+b+c)
var3=round(float(var1/var2),7)

formula=float(var3)
print(formula)


-- EXECUTION TIME:
0.204522
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
